# SimpleP2P

./: .gitignore  CMakeLists.txt  README.md  pybuildext.sh  runtest.sh  setup.py
src/: CMakeLists.txt  client.cxx  client.hxx  main.cxx  py_simplep2p.cpp  receiver.cxx  receiver.hxx  sender.cxx  sender.hxx  simplep2p.cxx  simplep2p.hxx
test/: send.py  wait.py
